--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Profile -->
+              <!-- End Doc Brown -->
               
               <!-- Duplicate li code block above to place more students here -->
 
